gccida/c2/safe_from_p
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/safe_from_p/src/expr.c:6013:14: error: expected expression
tree_int_cst::$A887AD9C3C6C8CC7716950D571F57C9D *p_int_cst; // r15 
             ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/safe_from_p/src/expr.c:6017:4: error: expected ';' after expression
rtx rtl; // r12 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/safe_from_p/src/expr.c:6017:5: error: use of undeclared identifier 'rtl'; did you mean 'rtx'?
rtx rtl; // r12 
    ^~~
    rtx
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/safe_from_p/src/expr.c:6005:5: note: 'rtx' declared here
rtx rtx; // r14 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/safe_from_p/src/expr.c:6018:4: error: expected ';' after expression
rtx v17; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/safe_from_p/src/expr.c:6018:5: error: use of undeclared identifier 'v17'
rtx v17; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/safe_from_p/src/expr.c:6024:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v23; // rsi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/safe_from_p/src/expr.c:6026:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *imag; // rsi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/safe_from_p/src/expr.c:6027:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *elements; // rsi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/safe_from_p/src/expr.c:6072:1: error: use of undeclared identifier 'safe_from_p_save_expr_list'
safe_from_p_save_expr_list = 0LL; 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/safe_from_p/src/expr.c:6074:11: error: use of undeclared identifier 'safe_from_p_save_expr_list'
for ( i = safe_from_p_save_expr_list; i; i = i->common.chain ) 
          ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/safe_from_p/src/expr.c:6085:1: error: use of undeclared identifier 'p_int_cst'
p_int_cst = &exp->int_cst.int_cst; 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/safe_from_p/src/expr.c:6087:14: error: use of undeclared identifier 'p_int_cst'
exp = ( tree)p_int_cst->low; 
             ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/safe_from_p/src/expr.c:6102:1: error: use of undeclared identifier 'rtl'; did you mean 'rtx'?
rtl = exp->decl.rtl; 
^~~
rtx
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/safe_from_p/src/expr.c:6005:5: note: 'rtx' declared here
rtx rtx; // r14 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/safe_from_p/src/expr.c:6103:7: error: use of undeclared identifier 'rtl'; did you mean 'rtx'?
if ( !rtl ) 
      ^~~
      rtx
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/safe_from_p/src/expr.c:6005:5: note: 'rtx' declared here
rtx rtx; // r14 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/safe_from_p/src/expr.c:6106:17: error: use of undeclared identifier 'rtl'
if ( *( _WORD *)rtl == 63 ) 
                ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/safe_from_p/src/expr.c:6108:1: error: use of undeclared identifier 'rtl'; did you mean 'rtx'?
rtl = rtl->fld[0].rtx; 
^~~
rtx
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/safe_from_p/src/expr.c:6005:5: note: 'rtx' declared here
rtx rtx; // r14 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/safe_from_p/src/expr.c:6108:7: error: use of undeclared identifier 'rtl'; did you mean 'rtx'?
rtl = rtl->fld[0].rtx; 
      ^~~
      rtx
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/safe_from_p/src/expr.c:6005:5: note: 'rtx' declared here
rtx rtx; // r14 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/safe_from_p/src/expr.c:6109:17: error: use of undeclared identifier 'rtl'
if ( *( _WORD *)rtl == 61 ) 
                ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/safe_from_p/src/expr.c:6112:6: error: use of undeclared identifier 'rtl'; did you mean 'rtx'?
if ( rtl->fld[0].rtint < 0x35u ) 
     ^~~
     rtx
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/safe_from_p/src/expr.c:6005:5: note: 'rtx' declared here
rtx rtx; // r14 
    ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/safe_from_p/src/obj/expr.o] Error 1
